--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,35 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>NumberGuess</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
-</body>
+<div class="jumbotron">
+  Test
+</div>
 
+  <div class="container">
+
+    <div class="guessHolder">
+      <div ><input type="text" placeholder="_ _ _ _" id="centerGuess"> Position:<p id=""></p> Number:<p id="numHold"></p></div>
+      <input type="text"  placeholder="_ _ _ _" id="centerGuess"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
+    </div>
+    <div class=" guessInput">
+      <input class="actualGuess" id="centerGuess" />
+      <input type="button"  value="Test" onclick="checkGuess()"/>
+    </div>
+  </div>
+</body>
+<script src="./javascripts/main.js"></script>
 </html>
