Cart before the horse

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <div class="container">
 
     <div class="guessHolder">
-      <div ><input type="text" placeholder="_ _ _ _" id="centerGuess"> Position:<p id=""></p> Number:<p id="numHold"></p></div>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess">Position: <span></span>  <br/> Number:<span></span></p>
       <input type="text"  placeholder="_ _ _ _" id="centerGuess"/>
       <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
       <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
