Fixed issue with guessing number;

--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,11 @@
   <div class="container">
 
     <div class="guessHolder">
-      <input type="text" placeholder="_ _ _ _" id="centerGuess">Position: <span></span>  <br/> Number:<span></span></p>
-      <input type="text"  placeholder="_ _ _ _" id="centerGuess"/>
-      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
-      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
-      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
-      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
-      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
-      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
-      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
-      <input type="text" placeholder="_ _ _ _" id="centerGuess"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne">
+      <input type="text"  placeholder="_ _ _ _" id="centerGuess" class="guessTwo">
+      <input type="text" placeholder="_ _ _ _" id="centerGuess" class="guessThree">
+      <input type="text" placeholder="_ _ _ _" id="centerGuess" class="guessFour"/>
+      <input type="text" placeholder="_ _ _ _" id="centerGuess" class="guessFive"/>
     </div>
     <div class=" guessInput">
       <input class="actualGuess" id="centerGuess" />
