Remember to check the actual values

--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,14 @@
   <div class="container">
 
     <div class="guessHolder">
-      <input type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne">
-      <input type="text"  placeholder="_ _ _ _" id="centerGuess" class="guessTwo">
-      <input type="text" placeholder="_ _ _ _" id="centerGuess" class="guessThree">
-      <input type="text" placeholder="_ _ _ _" id="centerGuess" class="guessFour"/>
-      <input type="text" placeholder="_ _ _ _" id="centerGuess" class="guessFive"/>
+      <input maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
+      <input  maxlength = 4 type="text"  placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control"  />
+      <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
+      <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control"  />
+      <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
     </div>
     <div class=" guessInput">
-      <input class="actualGuess" id="centerGuess" />
+      <input class="actualGuess" id="centerGuessInput" />
       <input type="button"  value="Test" onclick="checkGuess()"/>
     </div>
   </div>
