--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,32 @@
 
   <div class="container">
 
-    <div class="guessHolder">
-      <input maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
-      <input  maxlength = 4 type="text"  placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control"  />
-      <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
-      <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control"  />
-      <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
+
+    <div class="col guessHolder">
+            <div class="row">
+                <input maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
+            </div>
+            
+            <div class="row">
+                <input  maxlength = 4 type="text"  placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control"  />
+            </div>
+            <div class="row">
+                <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
+            </div>
+            <div class="row">
+                <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control"  />
+            </div>
+            <div class="row">
+                <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
+            </div>
     </div>
-    <div class=" guessInput">
-      <input class="actualGuess" id="centerGuessInput" />
-      <input type="button"  value="Test" onclick="checkGuess()"/>
-    </div>
+
+    <div class="row guessHolder">
+            <div class="col" id="mainRow">
+              <input maxlength=4 class=" centerGuess" id="centerGuessInput" />
+            <div class="col-sm">
+              <button id="goButton" type="button"  onclick="checkGuess()">Guess</button>
+              </div>
   </div>
 </body>
 <script src="./javascripts/main.js"></script>
