Trying to sync up tries with game over.

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
 
 
     <div class="col guessHolder">
+      <div class="row" id="gameOverText">
+        <input maxlength = 4 type="text" placeholder="_ _ _ _" id="actualAnswer" class="form-control" />
+    </div>
             <div class="row">
                 <input maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
             </div>
