Winning and Losing notifications work

--- a/public/index.html
+++ b/public/index.html
@@ -19,20 +19,20 @@
         <input maxlength = 4 type="text" placeholder="_ _ _ _" id="actualAnswer" class="form-control" />
     </div>
             <div class="row">
-                <input maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
+                <input maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" disabled />
             </div>
             
             <div class="row">
-                <input  maxlength = 4 type="text"  placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control"  />
+                <input  maxlength = 4 type="text"  placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" disabled />
             </div>
             <div class="row">
-                <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
+                <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control"disabled />
             </div>
             <div class="row">
-                <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control"  />
+                <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" disabled />
             </div>
             <div class="row">
-                <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" />
+                <input  maxlength = 4 type="text" placeholder="_ _ _ _" id="centerGuess" class="guessOne form-control" disabled/>
             </div>
     </div>
 
@@ -40,7 +40,7 @@
             <div class="col" id="mainRow">
               <input maxlength=4 class=" centerGuess" id="centerGuessInput" />
             <div class="col-sm">
-              <button id="goButton" type="button"  onclick="checkGuess()">Guess</button>
+              <button id="goButton" type="button"  onclick="checkGuess()">Guess</button>     <button id="goButton" type="button"  onclick="mainReset()">Reset</button>
               </div>
   </div>
 </body>
