--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,12 @@
 </head>
 
 <body>
-<div class="jumbotron">
-  Test
+<div class="jumbotron text-center">
+<h1>NumberGuess</h1>
+<p>Guess the 4-digit number in 5 tries</p>
 </div>
 
   <div class="container">
-
-
     <div class="col guessHolder">
       <div class="row" id="gameOverText">
         <input maxlength = 4 type="text" placeholder="_ _ _ _" id="actualAnswer" class="form-control" />
