--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
               <button id="goButton" type="button"  onclick="checkGuess()">Guess</button>     <button id="goButton" type="button"  onclick="mainReset()">Reset</button>
               </div>
   </div>
-  <footer class="text-center" style="margin-top:30px;"> <a href="www.github.com/CharleeBrown"> My Github</a></footer>
+  <footer class="text-center" style="margin-top:30px;"> <a style="color:lightskyblue; font-style:italic;"href="https://www.github.com/CharleeBrown"> My Github</a></footer>
 </body>
 <script src="./javascripts/main.js"></script>
 </html>
