--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>NumberGuess</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <link rel="icon" type="image/x-icon" href="/images/question.png">
 </head>
 
 <body>
