--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/x-icon" href="/images/question.png">
 </head>
 
-<body>
+<body id="bod">
   <div class="jumbotron text-center">
     <h1>NumberGuess</h1>
     <p>Guess the 4-digit number in 5 tries</p>
